# napari-labfill

./: .gitignore  LICENSE  README.md  setup.cfg  tox.ini
docs/: conf.py  index.rst
napari_labfill/: __init__.py  _dock_fill.py  _dock_labfill.py  _labfill.py  _labfill_widget.py  example.py
napari_labfill/_tests/: test_dock_widget.py  test_function.py  test_reader.py  test_writer.py
