[metadata]
name = napari-labfill
version = 0.0.1
author = Andreas Ettinger
author_email = andreas.ettinger@helmholtz-muenchen.de
license = BSD-3-Clause
url = https://github.com/AEttinger/napari-labfill
description = A plugin to generate label data using floodfill.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/AEttinger/napari-labfill/issues
    Documentation = https://github.com/AEttinger/napari-labfill#README.md
    Source Code = https://github.com/AEttinger/napari-labfill
    User Support = https://github.com/AEttinger/napari-labfill/issues

[options]
packages = find:
python_requires = >=3.7

# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    numpy


[options.entry_points] 
napari.plugin = 
    napari-labfill = napari_labfill
